@@ -27,6 +27,8 @@ Changes in openair 0.9-0 [2013-02-13]
 *	Use more wd sectors for surface modelling when wd is not
 	already rounded to 10 degree intervals in polarPlot
 *	Fix bug in timePlot when pch supplied and group = TRUE.
+*	Add Air Quality Standard for O3 in aqStats (days >120 ug/m3)
+	not to be exceeded more than 10 days a year.
 
 
 Changes in openair 0.8-0 [2012-11-30]
